Update appsettings.json remove connection string data

--- a/UnityHub/appsettings.json
+++ b/UnityHub/appsettings.json
@@ -7,6 +7,6 @@
   },
   "AllowedHosts": "*",
   "ConnectionStrings": {
-    "DefaultConnection": "Server=database-1.cjao2bdrwqja.ap-south-1.rds.amazonaws.com,1433;Database=unity_hub;User Id=admin;Password=sayid2003;"
+    "DefaultConnection": "Server=;Database=;User Id=;Password=;"
   },
 }
